--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -11,8 +11,12 @@ dependencies:
     sdk: flutter
   firebase_auth: ^5.0.0
   firebase_core: ^3.0.0
+  firebase_messaging: ^15.0.0
   cloud_firestore: ^5.0.0
   timeago: ^3.6.1
+
+  flutter_local_notifications: ^17.1.2
+
 
 dev_dependencies:
   flutter_lints: ^3.0.0
